Add register and login pages with form handling

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ξερή</title>
+  <title>Project Xeri</title>
 </head>
 <body>
-  <h1>Καλώς τους</h1>
-  <p id="status">Connecting to server...</p>
-
-  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-  <script src="/static/client.js"></script>
+  <h1>Welcome to Project Xeri</h1>
+  <p><a href="/register">Register</a></p>
+  <p><a href="/login">Login</a></p>
 </body>
 </html>
